--- a/src/Components/PokeCard.module.css
+++ b/src/Components/PokeCard.module.css
@@ -8,6 +8,8 @@ img {
 .card {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 2rem 1rem;
   border: 1px solid transparent;
   border-radius: 1rem;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
@@ -26,11 +28,9 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 2rem auto;
-  width: 10rem;
-  background: white;
+  margin: 1rem;
 }
 
-.btnMudarSprite {
+.bottom {
   margin: 1rem;
 }
